# cups-autoconfig

./: 10-cups-autoconfig.fdi  ChangeLog  Makefile.am  Overview.md  ProjectHome.md  configure.in  cups-autoconfig.conf  cups-autoconfig.spec  printers
patches/: cups-conf-relaxed-policy.patch  gnome-cups-manager-policy-support.patch  gnome-cups-manager-relaxed.patch  gnome-volume-manager-printer-notify.patch  libgnomecups-callback-fix.patch  libgnomecups-lpoptions.patch  libgnomecups-policy-support.patch
src/: Makefile.am  cups-autoconfig.c  hal-cups-autoconfig.in
src/.deps/: cups_autoconfig-cups-autoconfig.Po
trunk/: 10-cups-autoconfig.fdi  10-cups-autoconfig.fdi.in  ChangeLog  Makefile.am  autogen.sh  configure.in  cups-autoconfig.conf  cups-autoconfig.spec  printers
trunk/patches/: cups-backends-silenct-hal.patch  cups-conf-relaxed-policy.patch  cups-domain-socket-auth.patch  cups-policy-query-extension.patch  cups-use-printer-policy-for-delete.patch  gnome-volume-manager-printer-notify.patch  libgnomecups-policy-support.patch
trunk/po/: POTFILES.in  en_US.po
trunk/src/: Makefile.am  cups-autoconfig.c  hal-cups-autoconfig.in
wiki/: Overview.wiki  PageName.wiki
